--- a/css/aANDi.css
+++ b/css/aANDi.css
@@ -168,6 +168,9 @@ h4 {
 .bridalparty .maid:nth-child(9) {
         background-image:url(../images/bridalparty/sstewart.png);
 }
+.bridalparty .maid:nth-child(6) {
+        background-image:url(../images/bridalparty/rwinchester.png);
+}
 
 
 .bridalparty .man:nth-child(3) { 
@@ -176,6 +179,9 @@ h4 {
 
 .bridalparty .man:nth-child(4) { 
         background-image:url(../images/bridalparty/rince.png);
+}
+.bridalparty .man:nth-child(5) { 
+        background-image:url(../images/bridalparty/shinds.png);
 }
 .bridalparty .man:nth-child(7) {
         background-image:url(../images/bridalparty/igriffith.png);
